# aws-iot-device-sdk-embedded-C

./: CMakeLists.txt
config/: aws_iot_config.h
include/: aws_iot_mqtt_client.h  aws_iot_mqtt_client_interface.h
src/: .aws_iot_mqtt_client_yield.c.swp  .aws_iot_shadow_records.c.swo  .aws_iot_shadow_records.c.swp  aws_iot_mqtt_client.c  aws_iot_mqtt_client_common_internal.c  aws_iot_mqtt_client_connect.c  aws_iot_mqtt_client_publish.c  aws_iot_mqtt_client_subscribe.c  aws_iot_mqtt_client_unsubscribe.c  aws_iot_mqtt_client_yield.c  aws_iot_shadow.c  aws_iot_shadow_actions.c  aws_iot_shadow_records.c
